test/integration/bad/lang/incomplete5.stan
transformed data {
  if (2.0) ;
